# 3DApplication

./: .clang-format  .gitignore  Traitsメモ.txt  cmakeメモ.txt  g++エラーメモ.txt  githubメモ  memo.txt  test.cpp  コルーチンメモ.txt  コンパイラごとの違いまとめ.txt
main/: .gitignore  CMakeLists.txt  CMakePresets.json  functions.cmake
main/Memo/: ClusteredRendering.txt  UI.txt
main/Resources/HLSL/: DefaultHeader.hlsli  DefaultPS.hlsl  DefaultVS.hlsl  NoHeapPS.hlsl  NoHeapVS.hlsl  TreePlanePS.hlsl  TreePlaneVS.hlsl  VideoPS.hlsl
main/Resources/HLSL/Default/: ClusteredShadingHeader.hlsli  ClusteredShadingPS.hlsl  ClusteredShadingVS.hlsl  Z_PrepassVS.hlsl
main/Resources/HLSL/WVP行列メモ/: Matrix.txt  図作成用.pptx
main/Resources/HLSL/シェーダメモ/: 反射.txt
main/my_std/clang/unused/: emmintrin.h  mm_malloc.h  winnt.h
main/my_std/gcc/: cstdlib  stdlib.h  string.h  変更点.txt
main/my_std/gcc/bits/: allocator.h
main/my_std/gcc/boost/context/: fiber_fcontext.hpp
main/src/: CMakeLists.txt  DefaultWindow.ixx  MyWindow1.ixx  MyWindow2.ixx  Resource1.ixx  Scene1.cpp  Scene1.ixx  Scene2.ixx  Script1.ixx  SplashScreenScene.cpp  SplashScreenScene.ixx  main.cpp  main_font.cpp  main_list.cpp  main_test.cpp  null.cpp
main/src/Application/: Application.cpp  Application.ixx  ApplicationEnum.ixx  ApplicationUtility.ixx  CMakeLists.txt  EventArgs.ixx  IApplicationManager.cpp  IApplicationManager.ixx  IWindow.cpp  IWindow.ixx  Log.cpp  Log.ixx
main/src/Application/InputSystem/: CMakeLists.txt  IInputManager.ixx  InputSystem.cpp  InputSystem.ixx  InputSystemUtility.ixx
main/src/Application/MediaPlayer/: CMakeLists.txt  IMediaPlayer.ixx  MediaPlayer.cpp  MediaPlayer.ixx
main/src/Application/SDL/: CMakeLists.txt  SDLWindowManager.ixx
main/src/Application/Windows/: CMakeLists.txt  ControlManager.ixx  DeviceContext.ixx  WinAPI.ixx  WinAPI_Constants.ixx  WinAPI_Messages.ixx  WindowClass.ixx  WindowsEventArgs.ixx
main/src/Application/Windows/DirectInput/: CMakeLists.txt  DirectInput.cpp  DirectInput.ixx
main/src/Application/Windows/Forms/: Brush.ixx  Button.ixx  CMakeLists.txt  CheckBox.ixx  ComboBox.ixx  Control.cpp  Control.ixx  Form.ixx  Forms.ixx  GroupBox.ixx  Label.ixx  ListBox.ixx  RadioButton.ixx  ScrollBar.ixx  TextBox.ixx
main/src/Application/Windows/MediaFoundation/: CMakeLists.txt  MFHeader.ixx  MediaPlayerForMediaFoundation.cpp  MediaPlayerForMediaFoundation.ixx
main/src/Application/Windows/WinAPI/: CMakeLists.txt  WinAPI.ixx  WinAPI_Constants.ixx  WinAPI_Messages.ixx
main/src/Boost/: Boost.ixx  BoostCoroutine.ixx  BoostThread.ixx  CMakeLists.txt
main/src/CRTDBG/: crtdbg_wrapper.hpp
main/src/Common3D/: CMakeLists.txt  Common3D.cpp  Common3D.ixx  Common3D.txt  Common3DInterface.ixx  Common3DUtilities.ixx
main/src/Common3D/DirectX/: CMakeLists.txt  DXHeader.ixx  DirectX.cpp  DirectX.ixx  DirectXHeader.hpp  DirectXHelper.ixx  DirectXResource.ixx  DirectX_Internal.ixx
main/src/Engine/: Bone.ixx  CMakeLists.txt  Engine.ixx  EngineUtilities.ixx  LayerMask.ixx  Scene.cpp  Scene.ixx  SceneManager.cpp  SceneManager.ixx
main/src/Engine/Components/: Animator.cpp  Animator.ixx  Animator_Internal.ixx  CMakeLists.txt  Camera.cpp  Camera.ixx  Component.ixx  Component.txt  Components.ixx  Declaration.ixx  GameObject.cpp  GameObject.ixx  Light.cpp  Light.ixx  MeshFilter.cpp  MeshFilter.ixx  Rigidbody.cpp  Rigidbody.ixx  Script.cpp  Script.ixx  Transform.ixx
main/src/Engine/Components_store/: CMakeLists.txt  Component.txt  Components-Animator.cpp  Components-Animator.ixx  Components-Animator_Internal.ixx  Components-Camera.cpp  Components-Camera.ixx  Components-Component.ixx  Components-Declaration.ixx  Components-GameObject.cpp  Components-GameObject.ixx  Components-Light.cpp  Components-Light.ixx  Components-MeshFilter.cpp  Components-MeshFilter.ixx  Components-Rigidbody.cpp  Components-Rigidbody.ixx  Components-Script.cpp  Components-Script.ixx  Components-Transform.ixx  Components.ixx
main/src/Headers/: CMakeLists.txt  NamespaceHelper.ixx
main/src/Headers/unused/: DebugClass.ixx
main/src/System/: CMakeLists.txt  System.ixx
main/src/System/Compression/: CMakeLists.txt  Compression.ixx  Huffman.ixx  LZ77.ixx  Zlib.ixx
main/src/System/Drawing/: BMP.ixx  CMakeLists.txt  Color.ixx  Drawing.ixx  Image.cpp  Image.ixx  PNG.ixx  Pixel.ixx  Rectangle.ixx  TGA.ixx
main/src/System/Encoding/: CMakeLists.txt  CP932.ixx  CodePage.ixx  CodePoint.ixx  Encoding.ixx
main/src/System/Font/: CMakeLists.txt  Font.ixx  FontFactory.ixx  IFont.ixx  OpenType.ixx  OpenType_Internal.cpp  OpenType_Internal.ixx  OpenType_Internal0.cpp  OpenType_Internal0.ixx
main/src/System/Font/Unused/: Type2Charstring.ixx
main/src/System/Formats/: CMakeLists.txt  FBX.ixx  Formats.ixx  PMD.ixx  VMD.ixx
main/src/System/IO/: CMakeLists.txt  File.ixx  IO.ixx  Path.cpp  Path.ixx  ResourcePath.ixx
main/src/System/Module/: Allocator.ixx  Atexit.ixx  BSpline.ixx  BitStream.ixx  CMakeLists.txt  CSTDINT.ixx  CString.ixx  Coroutine.ixx  Counter.ixx  DisposingObject.ixx  DualQuaternion.ixx  EnableVirtual.hpp  EventHandler.ixx  Exception.cpp  Exception.ixx  ExclusiveObject.ixx  FUNCSIG.hpp  FlagSet.ixx  Float.ixx  ForwardList.ixx  Function.ixx  HashMap.ixx  ICollection.ixx  IEnumerable.ixx  Iterators.ixx  List.ixx  ManagedObject.ixx  Math.ixx  Matrix.ixx  Memory.cpp  Memory.ixx  Module.ixx  Point.ixx  Property.ixx  Quaternion.ixx  Range.ixx  Size.ixx  SmartPtr.ixx  Sorts.ixx  StringBlock.cpp  (+16 more)
main/src/System/Module/IEnumerables/: CMakeLists.txt  Enumerators.ixx  IEnumerable.ixx  IEnumerator.ixx  IEnumeratorBase.ixx
main/src/System/Module/Objects/: CMakeLists.txt  Object.hpp  Objects.ixx  Objects_Internal.cpp  Objects_Internal.ixx  String.hpp  Type.hpp
main/src/System/Module/SmartPtrs/: CMakeLists.txt  IPtrCounter.ixx  SharedPtr.ixx  SmartPtrs.ixx  UniquePtr.ixx
main/src/System/Unused/: FUNCSIG.hpp  IPtrCounter.ixx  SharedPtr_.ixx  SmartPtr.ixx  Tuple.ixx  Variable.ixx
main/src/Test/: CMakeLists.txt  Col.ixx  WindowsTest.ixx
main/src/Unused/: main_test_1.cpp  main_test_2.cpp
