
add_subdirectory(Application)
add_subdirectory(Boost)
add_subdirectory(System)
add_subdirectory(Test)
add_subdirectory(Headers)
add_subdirectory(Common3D)
add_subdirectory(Engine)

FAddObjectLibrary(src_0
	SOURCES
		null.cpp
	DEPENDS
		System
		Boost
		Application
		Common3D
		Engine
		Test
		Headers
)
FAddObjectLibrary(src_1
	SOURCES
		DefaultWindow.ixx
		Resource1.ixx
	DEPENDS
		src_0
)
FAddObjectLibrary(src_2
	SOURCES
		Script1.ixx
	DEPENDS
		src_1
)
FAddObjectLibrary(src_3
	SOURCES
		MyWindow2.ixx
		Scene1.ixx
	DEPENDS
		src_2
)
FAddObjectLibrary(src_4
	SOURCES
		Scene2.ixx
		SplashScreenScene.ixx
	DEPENDS
		src_3
)
FAddObjectLibrary(src_5
	SOURCES
		MyWindow1.ixx
	DEPENDS
		src_4
)

FAddObjectLibrary(src_6
	SOURCES
		main.cpp
		SplashScreenScene.cpp
	DEPENDS
		src_5
)

FAddObjectLibrary(src_test
	SOURCES
		Scene1.cpp
	DEPENDS
		src_6
)

## src全体のターゲット
## 実行可能形式ターゲット'main'にsrc以下のライブラリをリンクするために、
## ターゲット'src'に対してPUBLICでリンクする。
FCombineObjectLibrary(src
	PUBLIC
		src_0
		src_1
		src_2
		src_3
		src_4
		src_5
		src_6
		src_test
	PUBLIC_LINK
		System
		Test
		Boost
		Application
		Headers
		Common3D
		Engine
)
